--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
       <!-- JAR Plugin with Entry Point -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
+        <artifactId>myansi-1.0-SNAPSHOT.jar</artifactId>
         <version>3.1.0</version>
         <configuration>
           <archive>
